...
        }
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        noDataLabel.alpha = 0
        title = "Gitpatch"
        dataSource.delegate = self
        tableView.delegate = self
        tableView.dataSource = self
        tableView.separatorColor = .clear
        
        let pop = UIBarButtonItem(image: UIImage(named: "up-arrow"), style: .plain, target: self, action: #selector(pop(_:)))
...
